--- a/locale/ko_KR/LC_MESSAGES/steamswitcher.po
+++ b/locale/ko_KR/LC_MESSAGES/steamswitcher.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: steamswitcher\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 20:58+0900\n"
-"PO-Revision-Date: 2019-09-01 21:03+0900\n"
+"PO-Revision-Date: 2019-09-03 15:45+0900\n"
 "Language: ko_KR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,8 +20,8 @@ msgstr ""
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: C:\Users\Admin\Desktop\steamswitcher\steamswitcher.py:60
-msgid "Update available"
-msgstr "업데이트 사용 가능"
+msgid "New version %s is available."
+msgstr "새 버전 %s 사용 가능"
 
 #: C:\Users\Admin\Desktop\steamswitcher\steamswitcher.py:67
 msgid "Visit GitHub"
@@ -31,15 +31,10 @@ msgstr "GitHub 방문"
 msgid "Using the latest version"
 msgstr "최신 버전 사용 중"
 
-#: C:\Users\Admin\Desktop\steamswitcher\steamswitcher.py:82
-msgid "Development version"
-msgstr "개발 버전"
-
 #: C:\Users\Admin\Desktop\steamswitcher\steamswitcher.py:88
 msgid "Failed to check for updates"
 msgstr "업데이트 확인 실패"
 
-#: C:\Users\Admin\Desktop\steamswitcher\steamswitcher.py:128
 #: C:\Users\Admin\Desktop\steamswitcher\steamswitcher.py:226
 msgid "Registry Error"
 msgstr "레지스트리 오류"
@@ -96,7 +91,7 @@ msgstr "추가할 계정을 입력하세요."
 
 #: C:\Users\Admin\Desktop\steamswitcher\steamswitcher.py:292
 msgid "In case of adding multiple accounts,"
-msgstr "다수의 계정을 입력할 경우에는"
+msgstr "다수의 계정을 입력할 경우에는,"
 
 #: C:\Users\Admin\Desktop\steamswitcher\steamswitcher.py:293
 msgid "seperate each account with '/' (slash)."
@@ -153,7 +148,7 @@ msgstr "오류"
 
 #: C:\Users\Admin\Desktop\steamswitcher\steamswitcher.py:532
 msgid "Could not start Steam automatically"
-msgstr "알 수 없는 이유로 Steam을 "
+msgstr "알 수 없는 이유로 Steam을"
 
 #: C:\Users\Admin\Desktop\steamswitcher\steamswitcher.py:533
 msgid "for unknown reason."
