Add translation of a few strings

--- a/locale/ko_KR/LC_MESSAGES/steamswitcher.po
+++ b/locale/ko_KR/LC_MESSAGES/steamswitcher.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: steamswitcher\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-21 09:48+0900\n"
-"PO-Revision-Date: 2020-07-21 09:48+0900\n"
+"POT-Creation-Date: 2020-07-21 09:50+0900\n"
+"PO-Revision-Date: 2020-07-21 09:51+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ko_KR\n"
@@ -472,6 +472,14 @@ msgstr ""
 "사용 방법에서 4번째 항목을 참조하세요.\n"
 "\n"
 "메뉴 > 정보로 GitHub 저장소를 열 수 있습니다."
+
+#: modules/ui.py:378
+msgid "Username"
+msgstr "계정이름"
+
+#: modules/ui.py:382
+msgid "Friend code"
+msgstr "친구 코드"
 
 #: modules/update.py:64
 msgid "Update"
