Add newline in checkupdate fail

--- a/locale/fr_FR/LC_MESSAGES/steamswitcher.po
+++ b/locale/fr_FR/LC_MESSAGES/steamswitcher.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: steamswitcher\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-23 14:25+0200\n"
-"PO-Revision-Date: 2020-07-24 07:47+0900\n"
+"PO-Revision-Date: 2020-07-26 12:29+0900\n"
 "Last-Translator: QuentiumYT\n"
 "Language-Team: French (France)\n"
 "Language: fr_FR\n"
@@ -538,5 +538,5 @@ msgstr "Version de développement"
 #: modules/update.py:344
 msgid "Failed checking for updates. Click here to try again."
 msgstr ""
-"Échec de la vérification des mises à jour. Cliquez ici pour essayer à "
-"nouveau."
+"Échec de la vérification des mises à jour.\n"
+"Cliquez ici pour essayer à nouveau."
